--- a/src/pages/site.astro
+++ b/src/pages/site.astro
@@ -8,11 +8,14 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Blog</title>
+		<title>My Astro Site</title>
 	</head>
 	<body>
 		<a href="/">Home  </a>
-		<a href="/about">  About</a>
-		<h1>Astro</h1>
+		<a href="/about">  About  </a>
+		<a href="/site">  Site</a>
+
+		<h1>My Astro Site</h1>
+		<h2>My Astro Learning Blog</h2>
 	</body>
 </html>
