--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-const pageTitle="Astro Blog"
+const pageTilte="My Astro Blog"
 ---
 
 <html lang="en">
@@ -8,13 +8,19 @@ const pageTitle="Astro Blog"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
+		<title>{pageTilte}</title>
 	</head>
 	<body>
 		<a href="/">Home</a>
 		<a href="/about">About</a>
 		<a href="/blog">Blog</a>
 
-		<h1>{pageTitle}</h1>
+		<h1>{pageTilte}</h1>
+		<h2>My Astro Learning Blog</h2>
+		<ul>
+			<li><a href="/posts/post-1/">Post 1</a></li>
+			<li><a href="/posts/post-2/">Post 2</a></li>
+			<li><a href="/posts/post-3/">Post 3</a></li>
+		  </ul>
 	</body>
 </html>
